--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.24.0",
+    "axios": "^0.26.1",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
+    "react-select": "^5.2.2",
+    "sass": "^1.49.9",
+    "stripe": "^8.209.0",
     "styled-components": "^5.3.3",
-    "styled-icons": "^10.28.0"
+    "styled-icons": "^10.28.0",
+    "swiper": "^8.0.7"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.6",
