--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^0.26.1",
     "lodash": "^4.17.21",
     "next": "12.1.0",
+    "next-auth": "^4.2.1",
     "react": "17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
     "react-select": "^5.2.2",
+    "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
     "stripe": "^8.209.0",
     "styled-components": "^5.3.3",
