--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
+    "react-player": "^2.9.0",
     "react-select": "^5.2.2",
     "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
