--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@stripe/stripe-js": "^1.24.0",
     "axios": "^0.26.1",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-auth": "^4.2.1",
     "react": "17.0.2",
+    "react-animated-number": "^0.4.4",
     "react-circular-progressbar": "^2.0.4",
+    "react-cookie": "^4.1.1",
+    "react-countup": "^6.1.1",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
+    "react-parallax": "^3.3.0",
     "react-player": "^2.9.0",
     "react-select": "^5.2.2",
     "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
+    "smoothscroll-polyfill": "^0.4.4",
     "stripe": "^8.209.0",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.28.0",
