--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "stripe": "^8.209.0",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.28.0",
-    "swiper": "^8.0.7"
+    "swiper": "^8.0.7",
+    "tawkto-react": "^3.0.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.6",
