--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@stripe/stripe-js": "^1.24.0",
     "axios": "^0.26.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-auth": "^4.2.1",
