--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-select": "^5.2.2",
     "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
+    "sharp": "^0.30.4",
     "smoothscroll-polyfill": "^0.4.4",
     "stripe": "^8.209.0",
     "styled-components": "^5.3.3",
