--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.11",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@stripe/stripe-js": "^1.24.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.2.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "next": "12.1.0",
+    "next": "^12.2.5",
     "next-auth": "^4.2.1",
     "react": "17.0.2",
-    "react-animated-number": "^0.4.4",
     "react-circular-progressbar": "^2.0.4",
     "react-cookie": "^4.1.1",
     "react-countup": "^6.1.1",
@@ -29,7 +30,8 @@
     "react-player": "^2.9.0",
     "react-select": "^5.2.2",
     "react-toastify": "^8.2.0",
-    "sass": "^1.49.9",
+    "react-visibility-sensor": "^5.1.1",
+    "sass": "^1.55.0",
     "sharp": "^0.30.4",
     "smoothscroll-polyfill": "^0.4.4",
     "stripe": "^8.209.0",
@@ -39,8 +41,11 @@
     "tawkto-react": "^3.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "babel-plugin-styled-components": "^2.0.6",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
   }
 }
