--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.11",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
